Figuring out basics

--- a/Gradient Descent Diet.ipynb
+++ b/Gradient Descent Diet.ipynb
@@ -426,9 +426,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thoughts:\n",
-    "- should there be a derivative wrt to each food's feature, ie. a node for protein in chicken, node for protein in milk, etc\n",
-    "- or should it be summed in some way across each (leaning towards the idea above)"
+    "Current thought:\n",
+    "- amount of foods are inputs\n",
+    "- quality rates are weights (e.g., amount of calories per 100gs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#deriv wrt amounts is quality rate\n",
+    "\n",
+    "amounts = np.array([[1,1]])\n",
+    "\n",
+    "quality_rates = np.array([[1,5,2],\n",
+    "                          [2,1,6]])\n",
+    "\n",
+    "targets = [5,10,8]\n",
+    "\n",
+    "output = np.dot(amounts, quality_rates)\n",
+    "step_size = .01\n",
+    "\n",
+    "#(x - x_hat)^2 as the loss function?\n",
+    "#when x - xhat is positive slope of x^2 is positive, v.v.\n",
+    "\n",
+    "print(output)"
    ]
   },
   {
