Progress on optimization algo

--- a/Gradient Descent Diet.ipynb
+++ b/Gradient Descent Diet.ipynb
@@ -433,14 +433,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 6 8]]\n"
+      "Output:\n",
+      "[[3. 6. 8.]]\n",
+      "Error:\n",
+      "[[ 4. 16.  0.]]\n"
      ]
     }
    ],
@@ -448,20 +451,129 @@
     "import numpy as np\n",
     "#deriv wrt amounts is quality rate\n",
     "\n",
-    "amounts = np.array([[1,1]])\n",
+    "amounts = np.array([[1.0,1.0]])\n",
     "\n",
+    "#rows represent food, cols represent qualities\n",
     "quality_rates = np.array([[1,5,2],\n",
     "                          [2,1,6]])\n",
     "\n",
     "targets = [5,10,8]\n",
     "\n",
     "output = np.dot(amounts, quality_rates)\n",
-    "step_size = .01\n",
     "\n",
-    "#(x - x_hat)^2 as the loss function?\n",
-    "#when x - xhat is positive slope of x^2 is positive, v.v.\n",
+    "#squared error is the loss function\n",
+    "error = (output - targets)**2\n",
     "\n",
-    "print(output)"
+    "print(\"Output:\")\n",
+    "print(output)\n",
+    "print(\"Error:\")\n",
+    "print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6. 12. 16.]]\n",
+      "[[1. 1. 0.]]\n",
+      "[[ 6. 12.  0.]]\n",
+      "[[66. 24.]]\n",
+      "[[1.66 1.24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#derivative of loss wrt to output\n",
+    "dloss = 2*output\n",
+    "print(dloss)\n",
+    "\n",
+    "dmax = targets.copy\n",
+    "dmax = np.ones_like(output)\n",
+    "dmax[output >= targets] = 0 \n",
+    "print(dmax)\n",
+    "\n",
+    "dfoods = dloss * dmax\n",
+    "print(dfoods)\n",
+    "\n",
+    "dinputs = np.dot(dfoods, quality_rates.T)\n",
+    "print(dinputs)\n",
+    "\n",
+    "learning_rate = .01\n",
+    "\n",
+    "amounts += learning_rate * dinputs\n",
+    "print(amounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7.47016204 6.89372261]]\n",
+      "[[29.27550964 25.25579629  7.17476755]]\n",
+      "[[589.30036847 232.73932056   0.68100859]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#very basic prototype optimization algorithm\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#intialzie amounts\n",
+    "amounts = np.array([[1.0,1.0]])\n",
+    "\n",
+    "#rows represent food, cols represent qualities\n",
+    "quality_rates = np.array([[3,2,.5],\n",
+    "                          [1,1.5,.5]])\n",
+    "\n",
+    "learning_rate = .001\n",
+    "\n",
+    "#goal amounts\n",
+    "targets = [5,10,8]\n",
+    "\n",
+    "outputs, errors, amountss = [], [], []\n",
+    "\n",
+    "stop_time = 1000\n",
+    "for i in range(stop_time):\n",
+    "    output = np.dot(amounts, quality_rates)\n",
+    "    outputs.append(output)\n",
+    "    #squared error is the loss function\n",
+    "    error = (output - targets)**2\n",
+    "    errors.append(error)\n",
+    "    #derivative of loss wrt to output\n",
+    "    dloss = 2*output\n",
+    "    #print(dloss)\n",
+    "\n",
+    "    dmax = targets.copy\n",
+    "    dmax = np.ones_like(output)\n",
+    "    dmax[output >= targets] = 0 \n",
+    "    #print(dmax)\n",
+    "\n",
+    "    dfoods = dloss * dmax\n",
+    "    #print(dfoods)\n",
+    "\n",
+    "    #deriv wrt amounts is quality rate\n",
+    "    dinputs = np.dot(dfoods, quality_rates.T)\n",
+    "    #print(dinputs)\n",
+    "\n",
+    "    amounts += learning_rate * dinputs\n",
+    "    amountss.append(amounts)\n",
+    "\n",
+    "\n",
+    "print(amounts)\n",
+    "print(output)\n",
+    "print(error)"
    ]
   },
   {
