fixed error derivative

--- a/Gradient Descent Diet.ipynb
+++ b/Gradient Descent Diet.ipynb
@@ -511,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.51039082 3.37482759]]\n",
-      "[[10.90600006 11.77043683  8.0048506 ]]\n",
-      "[[3.48808367e+01 3.13444658e+00 2.35283144e-05]]\n"
+      "[[2.27147371 3.43186411]]\n",
+      "[[ 5.70333513 11.40667026  7.9994605 ]]\n",
+      "[[4.94680305e-01 1.97872122e+00 2.91059849e-07]]\n"
      ]
     }
    ],
@@ -534,7 +534,7 @@
     "amounts = np.array([[1.0,1.0]])\n",
     "\n",
     "#rows represent food, cols represent qualities\n",
-    "quality_rates = np.array([[3,2,.5],\n",
+    "quality_rates = np.array([[1,2,.5],\n",
     "                          [1,2,2]])\n",
     "\n",
     "learning_rate = .001\n",
@@ -552,7 +552,7 @@
     "    error = (output - targets)**2\n",
     "    errors.append(error)\n",
     "    #derivative of loss wrt to output\n",
-    "    dloss = 2*output\n",
+    "    dloss = 2*(output - targets)\n",
     "    #print(dloss)\n",
     "\n",
     "    dmax = targets.copy\n",
@@ -567,13 +567,21 @@
     "    dinputs = np.dot(dfoods, quality_rates.T)\n",
     "    #print(dinputs)\n",
     "\n",
-    "    amounts += learning_rate * dinputs\n",
+    "    amounts += -learning_rate * dinputs\n",
     "    amountss.append(amounts)\n",
     "\n",
     "\n",
     "print(amounts)\n",
     "print(output)\n",
     "print(error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to fully implement for food\n",
+    "- we are going to minimize cost"
    ]
   },
   {
