--- a/Gradient Descent Diet.ipynb
+++ b/Gradient Descent Diet.ipynb
@@ -787,7 +787,8 @@
    "source": [
     "After adding adagrad & rmsprop\n",
     "- we get to a local minimum quite quickly, which is close to excel solver solution => and if parameters are set accordinly, can get very similar solutions between RMSprop and ada grad\n",
-    "- ada grad does best with learning rate of 1, RMS .001. Same lrd"
+    "- ada grad does best with learning rate of 1, RMS .001. Same lrd\n",
+    "- perhaps try adam next. But I am starting to think this is probably the most optimal solution we will get"
    ]
   },
   {
